--- a/src/app/Utes/utesresolucion/utesresoluciondetalle.component.html
+++ b/src/app/Utes/utesresolucion/utesresoluciondetalle.component.html
@@ -125,8 +125,8 @@
                             <th class="center" style="width: 30px;"></th>
                             <th class="center hide" style="width: 30px;">ID</th>
                             <th>Resolución</th>
+                            <th>Observación</th>
                             <th>Fecha Resolución</th>
-                            <th>Tipo</th>
                             <th>Fecha Inicio</th>
                             <th>Fecha Entrega</th>
                         </tr>
@@ -136,8 +136,8 @@
                             <td class="center" style="width: 30px;">{{i + 1}}</td>
                             <td class="hide">{{item.idRsl}}</td>
                             <td>{{item.rslNumero}}</td>
+                            <td>{{item.rslObservacion}}</td>
                             <td>{{item.rslFechaResolucion}}</td>
-                            <td>{{item.tipoResolucion.idTrsl}}</td>
                             <td>{{item.rslFechaInicio}}</td>
                             <td>{{item.rslFechaEntrega}}</td>
                         </tr>
