--- a/src/app/Utes/asignacion/utesasignacionrevisordialog.component.html
+++ b/src/app/Utes/asignacion/utesasignacionrevisordialog.component.html
@@ -37,7 +37,7 @@
                 <th class="center">Acciones</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody style="min-width: 200px;">
             <tr *ngFor="let item of listPerAsignaRevisorSelected; index as i">
                 <td class="center" style="width: 30px;">{{i + 1}}</td>
                 <td>{{item.persona.perCedula}}</td>
